NULL =
EXTRA_DIST = \
	patch \
	control \
	control.gpe \
	control.opie \
	control.zaurus \
	rules \
	rules.gpe \
	rules.opie \
	rules.zaurus \
	postinst \
	postinst.gpe \
	postinst.opie \
	postinst.zaurus \
	postrm \
	postrm.gpe \
	postrm.opie \
	postrm.zaurus \
	vlc.desktop \
	vlc.gpe \
	vlc.opie \
	vlc.zaurus

