NULL =

EXTRA_DIST = \
	ax_append_compile_flags.m4 \
	ax_append_flag.m4 \
	ax_check_compile_flag.m4 \
	ax_require_defined.m4 \
	codeset.m4 \
	extern-inline.m4 \
	gettext.m4 \
	glibc21.m4 \
	glibc2.m4 \
	iconv.m4 \
	intdiv0.m4 \
	intl.m4 \
	intldir.m4 \
	intlmacosx.m4 \
	intmax.m4 \
	inttypes-pri.m4 \
	inttypes_h.m4 \
	lcmessage.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	lock.m4 \
	longlong.m4 \
	nls.m4 \
	po.m4 \
	printf-posix.m4 \
	progtest.m4 \
	size_max.m4 \
	stdcxx_14.m4 \
	stdint_h.m4 \
	uintmax_t.m4 \
	visibility.m4 \
	vlc.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xsize.m4 \
	$(NULL)

