NULL =

EXTRA_DIST = \
	ax_append_compile_flags.m4 \
	ax_append_flag.m4 \
	ax_check_compile_flag.m4 \
	ax_require_defined.m4 \
	gettext.m4 \
	iconv.m4 \
	intlmacosx.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	nls.m4 \
	po.m4 \
	progtest.m4 \
	ax_cxx_compile_stdcxx.m4 \
	ax_cxx_compile_stdcxx_17.m4 \
	vlc.m4 \
	$(NULL)
